# usdt_ars_tracker

./: README.md  main.py  pyproject.toml  requirements.txt
crypto_tracking/: crypto_tracking.db  csv_handler.py  logging_config.py  main.py
crypto_tracking/api_poller/: poller.py
crypto_tracking/backend/: main.py
crypto_tracking/frontend/: app.py
crypto_tracking/frontend/templates/: index.html
crypto_tracking/metrics_server/backend/: alert_handler.py  backend_main.py  database_utils.py  env_helper.py  main.py  statistics_generator.py  values_model.py
crypto_tracking/metrics_server/backend/database/: create_database.py  database_service.py  database_session.py  migrate_to_database.py  sql_models.py
crypto_tracking/metrics_server/backend/notifiers/: email_notifier.py  notifier_abs.py  telegram.py  telegram_notifier.py
crypto_tracking/metrics_server/frontend/: app.py  frontend_main.py
crypto_tracking/metrics_server/frontend/templates/: alerts.html  index.html  main.html  threshold.html
tests/: set_alert.sh
tests/metrics_server/backend/: test_statistic_generator.py
