[tool.poetry]
name = "crypto-tracking"
version = "0.1.0"
description = "Simple project to keep track of USDT/ARS fluctuations"
authors = ["Julian Merida <julianmr97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
