[tool.poetry]
name = "crypto-tracking"
version = "0.1.2"
description = "Simple project to keep track of USDT/ARS fluctuations of buenbit"
authors = ["Julian Merida <julianmr97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.1"
requests = "^2.31.0"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pytest = "^8.3.2"
python-telegram-bot = "^21.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = 'tests'
